name:                hnock
version:             0.1.0
synopsis:            A Nock interpreter.
description:         A Nock interpreter.
homepage:            https://github.com/jtobin/hnock
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.io
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Nock
  build-depends:
      base >= 4.8 && < 4.12

