name:                hnock
version:             0.1.0
synopsis:            A Nock interpreter.
description:         A Nock interpreter.
homepage:            https://github.com/jtobin/hnock
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.io
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      lib
  exposed-modules:
      Nock
      Nock.Eval
      Nock.Language
      Nock.Parse
  build-depends:
      base   >= 4.8      && < 4.12
    , parsec >= 3.1.13.0 && < 3.2
    , text   >= 1.2.3.0  && < 1.3

