name:                hnock
version:             0.3.0
synopsis:            A Nock interpreter.
description:         A Nock interpreter.
homepage:            https://github.com/jtobin/hnock
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.io
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG, README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      lib
  exposed-modules:
      Nock
      Nock.Eval
      Nock.Language
      Nock.Parse
  build-depends:
      base   >= 4.12     && < 5
    , parsec >= 3.1.13.0 && < 3.2
    , text   >= 1.2.3.0  && < 1.3

executable hnock
  default-language:  Haskell2010
  ghc-options:       -Wall -O2
  hs-source-dirs:    src
  Main-is:           Main.hs
  build-depends:
      base   >= 4.12
    , hnock
    , text   >= 1.2.3.0  && < 1.3

Test-suite hnock-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      test
  Main-is:             Main.hs
  build-depends:
      base   >= 4.12
    , hnock

